# al_adventure_catalog

./: .gitignore  .nojekyll  .output.txt  AGENTS.md  AI_ASSISTANT_GUIDELINES.md  CATALOG_FORMAT.md  CLAUDE.md  CNAME  CODE_RECOGNITION.md  CONTRIBUTING.md  GEMINI.md  KICKSTART.md  ORPHANED_PY_REPORT.md  PRIVATE_INVENTORY_HELP.md  Pipfile  README.md  REFACTOR.md  REFACTORING_PLAN.md  TASKS.md  TESTING.md  _config.yml  audit_links.py  check_theme_sync.py  copy_data.py  deploy.bat  deploy.ps1  dmsguild_bookmarklet.js  example_private_intentory.json  index.html  inventory.html  lp.bat  main.py  migrate_inventory.py  missing_adventures_report.html  missing_html.html  pyproject.toml  requirements.txt  serve.py  simplified_index.html  stats.html  (+3 more)
_adventures/: all_adventures.md  dragonlance_adventures.md  dragonlance_duration_2_hours_adventures.md  dragonlance_duration_4_hours_adventures.md  dragonlance_tier_1_adventures.md  dragonlance_tier_1_duration_2_hours_adventures.md  dragonlance_tier_1_duration_4_hours_adventures.md  dragonlance_tier_2_adventures.md  dragonlance_tier_2_duration_4_hours_adventures.md  dragonlance_tier_3_adventures.md  dragonlance_tier_3_duration_4_hours_adventures.md  duration_0_hours_adventures.md  duration_1-4_hours_adventures.md  duration_1-5_hours_adventures.md  duration_13_hours_adventures.md  duration_1_hours_adventures.md  duration_2-3_hours_adventures.md  duration_2-4_hours_adventures.md  duration_2-6_hours_adventures.md  duration_20-4_hours_adventures.md  duration_2_hours_adventures.md  duration_3-4_hours_adventures.md  duration_3-6_hours_adventures.md  duration_3_hours_adventures.md  duration_4-5_hours_adventures.md  duration_4-6_hours_adventures.md  duration_4-8_hours_adventures.md  duration_4-hour_hours_adventures.md  duration_4_hours_adventures.md  duration_5_hours_adventures.md  duration_6-8_hours_adventures.md  duration_6_hours_adventures.md  duration_7_hours_adventures.md  duration_8-10_hours_adventures.md  duration_8-12_hours_adventures.md  duration_8_hours_adventures.md  eberron_adventures.md  eberron_duration_2-4_hours_adventures.md  (+178 more)
_data/: all_adventures.json  (+15 more)
(+7200 files in other folders)
