[project]
name = "al-adventure-catalog"
version = "0.0.0"
description = "Parsers and utilities to build JSON for the site from DMsGuild pages."
readme = "README.md"
requires-python = ">=3.13"
# Only put runtime deps here (what your code needs to execute)
dependencies = [
    "beautifulsoup4",
    "requests",
    "word2number",
    "python-dotenv",
    "pytest>=9.0.2",
]

[project.scripts]
# Entry points: Run scripts as commands with "uv run <command>"
# These create console commands that work with the package structure
maintaindb = "maintaindb.cli:main"
maintaindb-stats = "maintaindb.stats:generate_stats"
maintaindb-process = "maintaindb.process_downloads:process_downloads"
maintaindb-aggregate = "maintaindb.aggregator:aggregate"
maintaindb-rss = "maintaindb.process_rss:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["maintaindb/tests"]
filterwarnings = ["ignore::DeprecationWarning"]

# Formatters / linters (optional but recommended)
[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "UP", "B"]
ignore = []
fix = true
